--- a/src/components/layout/Header.css
+++ b/src/components/layout/Header.css
@@ -1,7 +1,6 @@
 .header {
   background-color: #1bbc86;
   padding: 10px;
-  display: flex;
   font-size: 1rem;
 }
 #tit {
@@ -12,14 +11,23 @@ ul {
   list-style: none;
   display: flex;
   align-items: center;
-  width: 80%;
+  margin-left: auto;
 }
+
+.headerContainer {
+  margin-left: auto;
+  margin-right: auto;
+  width: 80vw;
+  display: flex;
+}
+
 .header a {
   margin-right: 10px;
   color: black;
   text-decoration: none;
   font-size: 1.2rem;
 }
+
 a:hover {
   color: #666;
 }
