Bid Context close to finished/must distinguish between listing/bids on listingBids page

--- a/src/components/listings/listings.css
+++ b/src/components/listings/listings.css
@@ -27,6 +27,9 @@ textarea {
   border: #ccc 1px dotted;
   margin: 0.7rem 0;
 }
+.card-edit {
+  background-color: lightgray;
+}
 .clearButton {
   width: 80%;
   background-color: var(--danger-color);
@@ -52,4 +55,10 @@ textarea {
 span {
   display: inline-block;
   margin: 8px 8px;
+}
+a {
+  width: 20%;
+}
+.buttonLink {
+  width: 100% !important;
 }
