--- a/src/components/auth/Login.css
+++ b/src/components/auth/Login.css
@@ -37,7 +37,7 @@ input[type="submit"] {
 }
 
 .registerButton {
-  width: 235% !important;
+  width: 250% !important;
   background-color: #ffff44;
   border: 5px;
   color: black;
@@ -45,6 +45,8 @@ input[type="submit"] {
   margin: 4px 4px;
   cursor: pointer;
   text-align: center;
+  border-radius: 6px;
+  padding: 8px;
 }
 
 .registerButton:hover {
@@ -78,3 +80,6 @@ input[type="checkbox"] {
 .remember {
   display: flex;
 }
+/* .register {
+  
+} */
